--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <a href="projects.html">作品集</a> |
     <a href="contact.html">聯絡我</a>
   </nav>
+
+  <section class="hero-banner">
+    <div class="hero-text">
+      <h1>哈囉，我是 Andy</h1>
+      <p>歡迎來到我的個人網站</p>
+    </div>
+  </section>
+  
 <!-- 🌄 Banner 圖片輪播（這裡先簡單放三張） -->
 <div class="banner-container">
     <img src="images/banner1.jpg" class="banner" alt="Banner 1">
