--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Andy 的個人網站</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 導覽列 -->
   <nav>
-    <a href="index.html">首頁</a> |
-    <a href="about.html">關於我</a> |
-    <a href="projects.html">作品集</a> |
+    <a href="index.html">首頁</a>
+    <a href="about.html">關於我</a>
+    <a href="projects.html">作品集</a>
     <a href="contact.html">聯絡我</a>
   </nav>
 
@@ -20,39 +20,36 @@
       <p>歡迎來到我的個人網站</p>
     </div>
   </section>
-  
-<!-- 🌄 Banner 圖片輪播（這裡先簡單放三張） -->
-<div class="banner-container">
-    <img src="images/banner1.jpg" class="banner" alt="Banner 1">
-    <img src="images/banner2.jpg" class="banner" alt="Banner 2">
-    <img src="images/banner3.jpg" class="banner" alt="Banner 3">
+
+  <div class="profile-section">
+    <img src="images/profile.jpg" alt="個人大頭貼" class="avatar">
+    <p class="intro-text">我是學前端與經濟研究的研究生，喜歡排球與探索科技。</p>
   </div>
-  
-  <!-- 😎 大頭貼 -->
-  <img src="images/profile.jpg" class="avatar" alt="個人大頭貼">
-  
-  
-  <h1>哈囉！我是 Andy</h1>
-  <p>歡迎來到我的網站～目前就讀於清華大學經濟研究所！</p>
 
-  <h2>🔗 推薦網站</h2>
-<ul>
-  <li><a href="https://www.ted.com/" target="_blank">TED Talks</a></li>
-  <li><a href="https://medium.com/" target="_blank">Medium</a></li>
-  <li><a href="https://www.coursera.org/" target="_blank">Coursera</a></li>
-</ul>
+  <section class="links-section">
+    <h2>🔗 推薦網站</h2>
+    <ul class="card-list">
+      <li><a href="https://www.ted.com/" target="_blank">TED Talks</a></li>
+      <li><a href="https://medium.com/" target="_blank">Medium</a></li>
+      <li><a href="https://www.coursera.org/" target="_blank">Coursera</a></li>
+    </ul>
+  </section>
 
-<h2>📚 推薦文章</h2>
-<ul>
-  <li>
-    <strong>學習 GitHub Pages 的完整流程</strong> – 建立個人網站必看
-    <a href="https://pages.github.com/" target="_blank">閱讀文章</a>
-  </li>
-  <li>
-    <strong>網站新手排版指南</strong> – 從 HTML 開始學排版
-    <a href="https://developer.mozilla.org/zh-TW/docs/Learn/HTML" target="_blank">閱讀文章</a>
-  </li>
-</ul>
+  <section class="articles-section">
+    <h2>📚 推薦文章</h2>
+    <ul class="card-list">
+      <li>
+        <strong>學習 GitHub Pages 的完整流程</strong><br>
+        – 建立個人網站必看。<br>
+        <a href="https://pages.github.com/" target="_blank">閱讀文章</a>
+      </li>
+      <li>
+        <strong>網站新手排版指南</strong><br>
+        – 從 HTML 開始學排版。<br>
+        <a href="https://developer.mozilla.org/zh-TW/docs/Learn/HTML" target="_blank">閱讀文章</a>
+      </li>
+    </ul>
+  </section>
 
 </body>
 </html>
