--- a/index.html
+++ b/index.html
@@ -1,76 +1,77 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Andy 的個人網站</title>
+  <title>Andy Feng | 個人網站</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- 🔹 導覽列 -->
-  <nav>
-    <a href="index.html">首頁</a>
-    <a href="about.html">關於我</a>
-    <a href="projects.html">作品集</a>
-    <a href="contact.html">聯絡我</a>
+  <!-- 導覽列 -->
+  <nav class="navbar">
+    <div class="nav-logo">Andy Feng</div>
+    <ul class="nav-links">
+      <li><a href="#">首頁</a></li>
+      <li><a href="#about">關於我</a></li>
+      <li><a href="#projects">作品集</a></li>
+      <li><a href="#contact">聯絡我</a></li>
+    </ul>
   </nav>
 
-  <!-- 🔸 主體：左側卡片＋右側介紹 -->
-  <div class="container">
-    <!-- 左側卡片 -->
-    <div class="profile-card">
-      <img src="images/profile.jpg" alt="個人大頭貼" class="avatar">
-      <h2>Andy Feng</h2>
-      <p class="title">經濟研究生</p>
-      <div class="socials">
-        <a href="#"><img src="images/icon-facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
-        <a href="#"><img src="images/icon-github.png" alt="GitHub"></a>
+  <!-- 主體區塊 -->
+  <div class="main-section">
+    <!-- 左：背景色塊 + 卡片 -->
+    <div class="left-panel">
+      <div class="profile-card">
+        <img src="images/profile.jpg" alt="大頭照" class="avatar">
+        <h2>Andy Feng</h2>
+        <p class="role">經濟研究生</p>
+        <div class="socials">
+          <a href="#"><img src="images/icon-facebook.png" alt="FB"></a>
+          <a href="#"><img src="images/icon-twitter.png" alt="Twitter"></a>
+          <a href="#"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
+        </div>
       </div>
     </div>
 
-    <!-- 右側內容 -->
-    <div class="intro">
-      <h1>Hello</h1>
-      <p class="subtitle">Here's who I am & what I do</p>
-      <div class="buttons">
-        <a href="#" class="btn">Resume</a>
-        <a href="projects.html" class="btn outline">Projects</a>
+    <!-- 右：文字內容 -->
+    <div class="right-panel">
+      <h1 class="hello">Hello</h1>
+      <p class="subtext">Here's who I am & what I do</p>
+      <div class="button-group">
+        <a href="#" class="btn filled">Resume</a>
+        <a href="#projects" class="btn outlined">Projects</a>
       </div>
       <p class="desc">
-        我是來自台灣的經濟研究生，熱愛資料分析、前端開發與財務研究。<br>
-        正在一步步打造屬於自己的履歷與作品展示網站。
+        我是 Andy，來自台灣，目前是經濟研究所學生，熱愛資料分析與前端開發。<br>
+        正在建立屬於自己的個人品牌與網站。
       </p>
     </div>
   </div>
 
-  <!-- 🔹 推薦網站 -->
-  <section class="section">
-    <h2>🔗 推薦網站</h2>
-    <ul class="card-list">
+  <!-- 推薦網站 -->
+  <section class="recommend-section">
+    <h2>📌 推薦網站</h2>
+    <ul>
       <li><a href="https://www.ted.com/" target="_blank">TED Talks</a></li>
-      <li><a href="https://medium.com/" target="_blank">Medium</a></li>
+      <li><a href="https://www.medium.com/" target="_blank">Medium</a></li>
       <li><a href="https://www.coursera.org/" target="_blank">Coursera</a></li>
     </ul>
   </section>
 
-  <!-- 🔹 推薦文章 -->
-  <section class="section">
-    <h2>📚 推薦文章</h2>
-    <ul class="card-list">
-      <li>
-        <strong>學習 GitHub Pages 的完整流程</strong><br>
-        建立個人網站必看。<br>
-        <a href="https://pages.github.com/" target="_blank">閱讀文章</a>
-      </li>
-      <li>
-        <strong>網站新手排版指南</strong><br>
-        從 HTML 開始學排版。<br>
-        <a href="https://developer.mozilla.org/zh-TW/docs/Learn/HTML" target="_blank">閱讀文章</a>
-      </li>
+  <!-- 推薦文章 -->
+  <section class="recommend-section">
+    <h2>📖 推薦文章</h2>
+    <ul>
+      <li><a href="#">為什麼我選擇學經濟？</a></li>
+      <li><a href="#">5 個讓你更懂資料科學的工具</a></li>
+      <li><a href="#">我的前端學習路線</a></li>
     </ul>
   </section>
 
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Andy Feng | All rights reserved.</p>
+  </footer>
 </body>
 </html>
