--- a/index.html
+++ b/index.html
@@ -1,77 +1,61 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Andy Feng | 個人網站</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 導覽列 -->
-  <nav class="navbar">
-    <div class="nav-logo">Andy Feng</div>
-    <ul class="nav-links">
-      <li><a href="#">首頁</a></li>
-      <li><a href="#about">關於我</a></li>
-      <li><a href="#projects">作品集</a></li>
-      <li><a href="#contact">聯絡我</a></li>
-    </ul>
+  <nav>
+    <a href="index.html">首頁</a>
+    <a href="about.html">關於我</a>
+    <a href="projects.html">作品集</a>
+    <a href="contact.html">聯絡我</a>
   </nav>
 
-  <!-- 主體區塊 -->
-  <div class="main-section">
-    <!-- 左：背景色塊 + 卡片 -->
-    <div class="left-panel">
-      <div class="profile-card">
-        <img src="images/profile.jpg" alt="大頭照" class="avatar">
-        <h2>Andy Feng</h2>
-        <p class="role">經濟研究生</p>
-        <div class="socials">
-          <a href="#"><img src="images/icon-facebook.png" alt="FB"></a>
-          <a href="#"><img src="images/icon-twitter.png" alt="Twitter"></a>
-          <a href="#"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
-        </div>
+  <div class="main">
+    <div class="left-card">
+      <img src="images/profile.jpg" alt="大頭貼" class="avatar">
+      <h2>Andy Feng</h2>
+      <p class="subtitle">經濟研究生</p>
+      <div class="social">
+        <a href="#"><img src="images/fb.png" alt="FB"></a>
+        <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
       </div>
     </div>
 
-    <!-- 右：文字內容 -->
-    <div class="right-panel">
-      <h1 class="hello">Hello</h1>
+    <div class="right-content">
+      <h1>Hello</h1>
       <p class="subtext">Here's who I am & what I do</p>
-      <div class="button-group">
-        <a href="#" class="btn filled">Resume</a>
-        <a href="#projects" class="btn outlined">Projects</a>
+      <div class="buttons">
+        <a class="btn primary" href="about.html">Resume</a>
+        <a class="btn" href="projects.html">Projects</a>
       </div>
-      <p class="desc">
-        我是 Andy，來自台灣，目前是經濟研究所學生，熱愛資料分析與前端開發。<br>
-        正在建立屬於自己的個人品牌與網站。
-      </p>
+      <p class="description">我是 Andy，來自台灣，目前是經濟研究所學生，熟悉資料分析與前端開發。正在建立屬於自己的個人品牌網站。</p>
     </div>
   </div>
 
-  <!-- 推薦網站 -->
-  <section class="recommend-section">
+  <section class="section">
     <h2>📌 推薦網站</h2>
     <ul>
-      <li><a href="https://www.ted.com/" target="_blank">TED Talks</a></li>
-      <li><a href="https://www.medium.com/" target="_blank">Medium</a></li>
-      <li><a href="https://www.coursera.org/" target="_blank">Coursera</a></li>
+      <li><a href="https://www.ted.com" target="_blank">TED Talks</a></li>
+      <li><a href="https://www.medium.com" target="_blank">Medium</a></li>
+      <li><a href="https://www.coursera.org" target="_blank">Coursera</a></li>
     </ul>
   </section>
 
-  <!-- 推薦文章 -->
-  <section class="recommend-section">
+  <section class="section">
     <h2>📖 推薦文章</h2>
     <ul>
-      <li><a href="#">為什麼我選擇學經濟？</a></li>
-      <li><a href="#">5 個讓你更懂資料科學的工具</a></li>
-      <li><a href="#">我的前端學習路線</a></li>
+      <li><a href="#">ChatGPT 如何幫我完成學術報告</a></li>
+      <li><a href="#">從零開始的資料分析學習路</a></li>
     </ul>
   </section>
 
-  <!-- Footer -->
   <footer>
-    <p>© 2025 Andy Feng | All rights reserved.</p>
+    <p>&copy; 2025 Andy Feng. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
