--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">首頁</a> |
-    <a href="about.html">關於我</a> |
-    <a href="projects.html">作品集</a> |
+    <a href="index.html">首頁</a> 
+    <a href="about.html">關於我</a> 
+    <a href="projects.html">作品集</a> 
     <a href="contact.html">聯絡我</a>
   </nav>
 
