--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
   <section class="section">
     <h2>📌 推薦網站</h2>
     <ul>
-      <li><a href="https://www.ted.com" target="_blank">TED Talks</a></li>
-      <li><a href="https://www.medium.com" target="_blank">Medium</a></li>
-      <li><a href="https://www.coursera.org" target="_blank">Coursera</a></li>
+      <li><a href="https://www.econ.sinica.edu.tw/" target="_blank">中研院經濟所</a></li>
+      <li><a href="https://econpapers.repec.org/" target="_blank">EconPapers</a></li>
     </ul>
   </section>
 
