--- a/index.html
+++ b/index.html
@@ -2,84 +2,93 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Andy Feng | 個人網站</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Andy Feng | 個人履歷</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sticky 導覽列 -->
-  <header class="navbar">
-    <div class="container nav-container">
-      <div class="logo">Andy Feng</div>
-      <nav>
-        <a href="#home">首頁</a>
-        <a href="#about">關於我</a>
-        <a href="#projects">作品集</a>
-        <a href="#contact">聯絡我</a>
-      </nav>
-    </div>
-  </header>
 
-  <!-- HERO Section (大頭貼居中+名字標語) -->
-  <section class="hero" id="home">
-    <div class="container hero-content">
-      <img class="hero-avatar" src="images/profile.jpg" alt="大頭貼" />
-      <h1 class="hero-title">Andy Feng</h1>
-      <p class="hero-subtitle">勇敢探索經濟與數據的學術旅程</p>
-      <a class="hero-btn" href="#about">關於我</a>
-    </div>
-  </section>
+<!-- 導覽列 -->
+<header class="navbar">
+  <div class="container nav-container">
+    <div class="logo">Andy Feng</div>
+    <nav>
+      <a href="#home">首頁</a>
+      <a href="#about">關於我</a>
+      <a href="#projects">作品集</a>
+      <a href="#contact">聯絡我</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- About Me -->
-  <section class="section" id="about">
-    <div class="container">
-      <h2>關於我</h2>
-      <p>現為經濟研究生，專注於資料分析與前端學習，這個網站記錄我的學術成長與生活靈感。</p>
-    </div>
-  </section>
-
-  <!-- Projects -->
-  <section class="section" id="projects">
-    <div class="container">
-      <h2>作品集</h2>
-      <div class="card-grid">
-        <div class="card">
-          <img src="images/project1.jpg" alt="作品1" />
-          <h3>研究專案一</h3>
-          <p>經濟議題數據分析</p>
-        </div>
-        <div class="card">
-          <img src="images/project2.jpg" alt="作品2" />
-          <h3>前端作品二</h3>
-          <p>互動式個人網站設計</p>
-        </div>
-        <div class="card">
-          <img src="images/project3.jpg" alt="作品3" />
-          <h3>Python 數據</h3>
-          <p>真實資料分析練習</p>
-        </div>
+<!-- HERO (主視覺) -->
+<section class="hero-section" id="home">
+  <div class="hero-left"></div>
+  <div class="container hero-content">
+    <div class="profile-card">
+      <img src="images/profile.jpg" alt="大頭貼" class="avatar">
+      <h2>Andy Feng</h2>
+      <p>經濟研究生</p>
+      <div class="social-icons">
+        <a href="#"><img src="images/icon-fb.png" alt="Facebook"></a>
+        <a href="#"><img src="images/icon-twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
       </div>
     </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="section" id="contact">
-    <div class="container">
-      <h2>聯絡我</h2>
-      <form class="contact-form">
-        <input type="text" placeholder="你的名字" required />
-        <input type="email" placeholder="Email" required />
-        <textarea placeholder="想說的話..." required></textarea>
-        <button type="submit">送出</button>
-      </form>
+    <div class="intro-text">
+      <h1>Hello</h1>
+      <p>Here's who I am & what I do</p>
+      <div class="button-group">
+        <a href="#about" class="btn-primary">Resume</a>
+        <a href="#projects" class="btn-secondary">Projects</a>
+      </div>
+      <p class="intro-desc">
+        我是 Andy，目前在清華大學經濟所研究所深造。  
+        熱愛前端開發、資料分析與跨領域探索。  
+      </p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Andy Feng | All rights reserved.</p>
+<!-- About 區 -->
+<section class="section" id="about">
+  <div class="container">
+    <h2>About Me</h2>
+    <p>這裡可以加上更多的自我介紹或經歷說明。</p>
+  </div>
+</section>
+
+<!-- Projects 區 -->
+<section class="section" id="projects">
+  <div class="container">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">專案一</div>
+      <div class="project-card">專案二</div>
+      <div class="project-card">專案三</div>
     </div>
-  </footer>
+  </div>
+</section>
+
+<!-- Contact 區 -->
+<section class="section" id="contact">
+  <div class="container">
+    <h2>Contact</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="姓名" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="留言內容" required></textarea>
+      <button type="submit">送出訊息</button>
+    </form>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer>
+  <div class="container">
+    &copy; 2025 Andy Feng | All rights reserved.
+  </div>
+</footer>
+
 </body>
 </html>
