--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="profile-card">
       <img src="images/profile.jpg" alt="大頭貼" class="avatar">
       <h2>Andy Feng</h2>
-      <p>經濟研究生</p>
+      <p>掙扎的研究生</p>
       <div class="social-icons">
         <a href="#"><img src="images/icon-fb.png" alt="Facebook"></a>
         <a href="#"><img src="images/icon-twitter.png" alt="Twitter"></a>
@@ -43,8 +43,7 @@
         <a href="#projects" class="btn-secondary">Projects</a>
       </div>
       <p class="intro-desc">
-        我是 Andy，目前在清華大學經濟所研究所深造。  
-        熱愛前端開發、資料分析與跨領域探索。  
+        我是 Andy，目前就讀於清華大學經濟研究所。  
       </p>
     </div>
   </div>
@@ -70,6 +69,49 @@
   </div>
 </section>
 
+<!-- Blog 區 -->
+<section class="section" id="blog">
+    <div class="container">
+      <h2>📖 Blog</h2>
+      <div class="blog-grid">
+        <div class="blog-card">
+          <h3>大數據經濟學筆記</h3>
+          <p>探討資料經濟學與政策影響。</p>
+          <a href="#" target="_blank">閱讀更多 →</a>
+        </div>
+        <div class="blog-card">
+          <h3>學術研究工具推薦</h3>
+          <p>分享我常用的工具與技巧。</p>
+          <a href="#" target="_blank">閱讀更多 →</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!-- 推薦網站 -->
+  <section class="section" id="links">
+    <div class="container">
+      <h2>🔗 推薦網站</h2>
+      <ul class="link-list">
+        <li><a href="https://www.ted.com/" target="_blank">TED Talks</a></li>
+        <li><a href="https://www.medium.com/" target="_blank">Medium</a></li>
+        <li><a href="https://www.coursera.org/" target="_blank">Coursera</a></li>
+      </ul>
+    </div>
+  </section>
+  
+  <!-- 推薦文章 -->
+  <section class="section" id="articles">
+    <div class="container">
+      <h2>📚 推薦文章</h2>
+      <ul class="link-list">
+        <li><a href="#">如何設計有效的簡報</a></li>
+        <li><a href="#">Python 資料分析入門</a></li>
+        <li><a href="#">學術論文寫作技巧</a></li>
+      </ul>
+    </div>
+  </section>
+  
 <!-- Contact 區 -->
 <section class="section" id="contact">
   <div class="container">
