--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <div class="container">
       <h2>🔗 推薦網站</h2>
       <ul class="link-list">
-        <li><a href="https://www.ted.com/" target="_blank">TED Talks</a></li>
-        <li><a href="https://www.medium.com/" target="_blank">Medium</a></li>
-        <li><a href="https://www.coursera.org/" target="_blank">Coursera</a></li>
+        <li><a href="https://www.econ.sinica.edu.tw/" target="_blank">中央研究院經濟所</a></li>
+        <li><a href="https://econpapers.repec.org/" target="_blank">EconPapers-找paper的工具</a></li>
+        <li><a href="https://research.sinica.edu.tw/" target="_blank">中央研究院研之有物-有趣的知識</a></li>
       </ul>
     </div>
   </section>
@@ -105,9 +105,9 @@
     <div class="container">
       <h2>📚 推薦文章</h2>
       <ul class="link-list">
-        <li><a href="#">如何設計有效的簡報</a></li>
-        <li><a href="#">Python 資料分析入門</a></li>
-        <li><a href="#">學術論文寫作技巧</a></li>
+        <li><a href="https://udn.com/news/story/123296/8559372">陳國樑／稅收超徵≠財政餘裕</a></li>
+        <li><a href="https://research.sinica.edu.tw/low-fertility-rate-raise-children/">（生or不生？）為何孩子越生越少？人口學家鄭雁馨談少子化困境</a></li>
+        <li><a href="https://econ.ntu.edu.tw/ter/new/data/new/TER47-3/TER473-3.pdf">（窮養or富養？）論家戶所得與資產對子女教育之影響 — 以1993–1995 出生世代及其父母稅務資料為例</a></li>
       </ul>
     </div>
   </section>
