--- a/index.html
+++ b/index.html
@@ -77,9 +77,25 @@
           <p>Economics, Feb 2024</p>
           <p>GPA: 3.95 / 4.0<br>Top 3% · Early Graduation</p>
     </div>
+    
   </div>
 </section>
 
+<section class="section" id="skills">
+    <div class="container">
+      <h2>Technical Skills</h2>
+      <div class="skill-grid">
+        <div class="skill-card">MS Word</div>
+        <div class="skill-card">Excel</div>
+        <div class="skill-card">PowerPoint</div>
+        <div class="skill-card">TEJ</div>
+        <div class="skill-card">R (basic)</div>
+        <div class="skill-card">HTML (basic)</div>
+        <div class="skill-card">Bloomberg (basic)</div>
+      </div>
+    </div>
+  </section>
+  
 <!-- Projects 區 -->
 <section class="section" id="projects">
   <div class="container">
