--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 <section class="section" id="about">
   <div class="container">
     <h2>About Me</h2>
-    <p>我是 Andy，目前就讀清華大學經濟研究所，論文方向為產業組織<br><br>
+    <p>我是 Andy，目前就讀清華大學經濟研究所，論文方向為產業組織 Industrial Organization<br><br>
 
-        在學期間，我曾於台灣董事學會（TWIOD）擔任行政與財務實習生，分析 126 家中型潛力企業的財務與 ESG 資料，支援評選與個案研究。<br><br>
+        大學提早畢業的期間，我曾於台灣董事學會（TWIOD）擔任行政與財務實習生，分析 126 家中型潛力企業的財務與 ESG 資料，支援評選與個案研究。<br><br>
   
-        大學期間我也長期參與 USR 計畫與經濟教育推廣，曾於偏鄉小學授課、設計互動式經濟課程，以及參加全國期貨模擬交易競賽，於2002年下半年的市場取得 79.2% 的投資報酬率，榮獲第 18 名佳績。<br><br>
+        大學期間做為經探號的團員長期參與 USR 計畫與經濟教育推廣，曾於偏鄉小學舉辦助學營與團長小瓜老師（林彥玲教授）設計互動式經濟課程；以及參加全國期貨模擬交易競賽，於2022下半年的市場取得 79.2% 的投資報酬率，榮獲第 18 名佳績。<br><br>
   
-        我熱愛結合經濟理論與實務分析，期望未來能持續在資料驅動的經濟研究與產業實踐之間找尋交集。</p>
+        我目前結合經濟理論與實務分析，期望未來能持續在資料驅動的經濟研究與產業實踐之間找尋交集。</p>
     <h3>EDUCATION</h3>
 
     <div class="edu-block">
@@ -75,7 +75,7 @@
     <div class="edu-block">
           <h4>B.A. &nbsp;&nbsp;Tamkang University</h4>
           <p>Economics, Feb 2024</p>
-          <p>GPA: 3.95 / 4.0<br>Top 3% · Early Graduation</p>
+          <p>GPA: 3.95 / 4.0，Top 3% · Early Graduation</p>
     </div>
     
   </div>
