--- a/index.html
+++ b/index.html
@@ -177,10 +177,14 @@
 
 <!-- Footer -->
 <footer>
-  <div class="container">
-    &copy; 2025 Andy Feng | All rights reserved.
-  </div>
-</footer>
+    <div class="container">
+      <p>&copy; 2025 Andy Feng | All rights reserved.</p>
+      <a href="https://counter.dev/" target="_blank">
+        <img src="https://counter.dev/track.svg" alt="visitor counter" />
+      </a>
+    </div>
+  </footer>
+  
 
 </body>
 </html>
