--- a/index.html
+++ b/index.html
@@ -177,13 +177,12 @@
 
 <!-- Footer -->
 <footer>
-    <div class="container">
+    <div class="container" style="text-align: center;">
       <p>&copy; 2025 Andy Feng | All rights reserved.</p>
-      <a href="https://counter.dev/" target="_blank">
-        <img src="https://counter.dev/track.svg" alt="visitor counter" />
-      </a>
+      <img src="https://visitor-badge.laobi.icu/badge?page_id=andyfeng0711.aboutme" alt="訪問次數" />
     </div>
   </footer>
+  
   
 
 </body>
