--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       <h2>Andy Feng</h2>
       <p>掙扎的研究生</p>
       <div class="social-icons">
-        <a href="#"><img src="images/icon-fb.png" alt="Facebook"></a>
-        <a href="#"><img src="images/icon-twitter.png" alt="Twitter"></a>
-        <a href="#"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
+        <a href="https://www.linkedin.com/in/andyfeng0711/"><img src="images/social_13670350.png" alt="LinkedIn"></a>
       </div>
     </div>
     <div class="intro-text">
