--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h1>Hello</h1>
       <p>Here's who I am & what I do</p>
       <div class="button-group">
-        <a href="#about" class="btn-primary">Resume</a>
+        <a href="#about" class="btn-primary">CV</a>
         <a href="#projects" class="btn-secondary">Projects</a>
       </div>
       <p class="intro-desc">
@@ -108,11 +108,12 @@
 <section class="section" id="projects">
   <div class="container">
     <h2>Projects</h2>
-    <div class="project-grid">
-      <div class="project-card">專案一</div>
-      <div class="project-card">專案二</div>
-      <div class="project-card">專案三</div>
-    </div>
+    <div class="project-card">
+        <img src="images/project1.jpg" alt="履歷預覽圖" style="width: 100%; border-radius: 8px;" />
+        <h3>履歷與作品集</h3>
+        <p>完整收錄：學歷背景、實習經歷、獲獎記錄與專案作品</p>
+        <a href="images/Andy Feng_馮健恩 CV 含作品集.pdf" target="_blank">📄 點我查看 PDF</a>
+      </div>      
   </div>
 </section>
 
