--- a/index.html
+++ b/index.html
@@ -109,10 +109,8 @@
   <div class="container">
     <h2>Projects</h2>
     <div class="project-card">
-        <img src="images/project1.jpg" alt="履歷預覽圖" style="width: 100%; border-radius: 8px;" />
-        <h3>履歷與作品集</h3>
         <p>完整收錄：學歷背景、實習經歷、獲獎記錄與專案作品</p>
-        <a href="images/Andy Feng_馮健恩 CV 含作品集.pdf" target="_blank">📄 點我查看 PDF</a>
+        <a href="images/AndyFeng_馮健恩CV含作品集.pdf" target="_blank">📄 點我查看 PDF</a>
       </div>      
   </div>
 </section>
@@ -123,8 +121,8 @@
       <h2>📖 Blog</h2>
       <div class="blog-grid">
         <div class="blog-card">
-          <h3>大數據經濟學筆記</h3>
-          <p>探討資料經濟學與政策影響。</p>
+          <h3>也許會放字很醜的經濟學筆記</h3>
+          <p>探討經濟學的世界。</p>
           <a href="#" target="_blank">閱讀更多 →</a>
         </div>
         <div class="blog-card">
