--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h2>Projects</h2>
     <div class="project-card">
         <p>完整收錄：學歷背景、實習經歷、獲獎記錄與專案作品</p>
-        <a href="images/AndyFeng_馮健恩CV含作品集.pdf" target="_blank">📄 點我查看 PDF</a>
+        <a href="images/AndyFeng_CV_Projects.pdf" target="_blank">📄 點我查看 PDF</a>
       </div>      
   </div>
 </section>
