--- a/index.html
+++ b/index.html
@@ -163,14 +163,11 @@
 <section class="section" id="contact">
   <div class="container">
     <h2>Contact</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="姓名" required>
-      <input type="email" placeholder="Email" required>
-      <textarea placeholder="留言內容" required></textarea>
-      <button type="submit">送出訊息</button>
-    </form>
+    <p>歡迎留言與我聯絡：</p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesTW7mA7Z_pZy57deiWLWiWKEBOgCkQj5kOjTAxXhqFm_rHQ/viewform?embedded=true" width="640" height="677" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
   </div>
 </section>
+
 
 <!-- Footer -->
 <footer>
