--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a href="#projects" class="btn-secondary">Projects</a>
       </div>
       <p class="intro-desc">
-        我是 Andy，目前就讀於清華大學經濟研究所。  
+        我是 Andy，目前就讀於清華大學經濟研究所二年級。  
       </p>
     </div>
   </div>
